# aws-sdk-rust-sso-credentials

./: Cargo.toml  README.md
src/: main.rs  sso.rs
