[package]
name = "aws-sdk-rust-sso-credentials"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-sso = "0.33.0"
aws-sdk-sts = "0.33.0"
aws-types = "0.56.1"
chrono = { version="0.4", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10.1"
tokio = { version = "1.10", features = [ "full" ] }
